refactor server start technique, now able to shutdown server from GUI
git-svn-id: https://svn.apache.org/repos/asf/forrest/trunk@125498 13f79535-47bb-0310-9956-ffa450edef68